test/Tools/LeanCode.CodeAnalysis.Tests/TestSamples/Rejected/Methods.cs
namespace LeanCode.CodeAnalysis.Tests.TestSamples.Rejected;

public class Methods
{
    public virtual CancellationToken CancellationTokenNamingConvention(CancellationToken ct)
    {
        return ct;
    }
}
